--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "babel-preset-expo": "^54.0.9",
     "eslint": "^9.25.0",
     "eslint-config-expo": "~10.0.0",
+    "supabase": "^2.72.8",
     "tailwindcss": "^3.4.19",
     "typescript": "~5.9.2"
   },
