--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "lint": "expo lint"
+    "lint": "expo lint",
+    "gen-types": "npx supabase gen types typescript --project-id zjtmevexcftdatwpbdar --schema public > database.types.ts"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.3",
