--- a/supabase/config.toml
+++ b/supabase/config.toml
@@ -9,3 +9,14 @@ entrypoint = "./functions/create-konsultan/index.ts"
 # Specifies static files to be bundled with the function. Supports glob patterns.
 # For example, if you want to serve static HTML pages in your function:
 # static_files = [ "./functions/create-konsultan/*.html" ]
+
+[functions.create-mitra]
+enabled = true
+verify_jwt = false
+import_map = "./functions/create-mitra/deno.json"
+# Uncomment to specify a custom file path to the entrypoint.
+# Supported file extensions are: .ts, .js, .mjs, .jsx, .tsx
+entrypoint = "./functions/create-mitra/index.ts"
+# Specifies static files to be bundled with the function. Supports glob patterns.
+# For example, if you want to serve static HTML pages in your function:
+# static_files = [ "./functions/create-mitra/*.html" ]
