--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
     "gen-types": "npx supabase gen types typescript --project-id zjtmevexcftdatwpbdar --schema public > database.types.ts"
@@ -37,6 +37,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-native": "0.81.5",
+    "react-native-barcode-creator": "^0.1.8",
     "react-native-gesture-handler": "~2.28.0",
     "react-native-gifted-charts": "^1.4.71",
     "react-native-heroicons": "^4.0.0",
